# DSMLAI

./: .gitignore  README.md
.devcontainer/: devcontainer.json
AILessons/MCPs/: .gitignore  README.md  main.py  postCmd.sh  pyproject.toml
AILessons/MCPs/.devcontainer/: devcontainer.json
DLLessons/: README.md  requirments.txt
DLLessons/Assignments/Train CLIP/: .gitignore  README.md  play.ipynb  train_script.py
DLLessons/Assignments/Train VITCIFAR/: README.md
DLLessons/NLP DL/Ch14/: 01.Embedding.ipynb  README.md  blocks.py
DLLessons/NLP DL/Ch17/: README.md
DLLessons/NLP DL/Ch19/: README.md  app.py  clip.py  config.py  dataset.py  modules.py  utils.py
DLLessons/NLP DL/Ch21/: app.py  env.yml  train+app.ipynb  train.py  (+2 more)
DLLessons/VISION DL/: Ch1.md  README.md
DSLessons/: pyproject.toml
DSLessons/.devcontainer/: devcontainer.json
DSLessons/Intution/GD/: gradient_descent.ipynb  handle_boundary_condition.mkv  level_curve.mkv  multi_variiable_calculus.mkv  simple_calculus.ipynb  single_variable_calculus.mkv
DSLessons/Intution/PCA/: PCA_tSNE_UMAP.ipynb
DSLessons/LearnAlgebra/: linear algebra.ipynb
DSLessons/LearnNumpy/: numpy-fundamentals.py  numpy.ipynb
DSLessons/LearnPandas/: README.md  advance_pandas.ipynb  pandas_intro.ipynb
DSLessons/LearnPolars/: README.md  notebooks.ipynb
DSLessons/Visualize/: EDA.ipynb  plots.ipynb
MLLessons/: README.md  pyproject.toml
MLLessons/Effective XGBs/: ch10.py  ch11.py  ch12.py  ch14.py  ch15.py  ch16.py  ch17.py  ch18.py  ch19.py  ch2.py  ch20.py  ch3.py  ch4.py  ch5.py  ch6.py  ch7.py  ch8.py  ch9.py
(+95 files in other folders)
