[project]
name = "mllessons"
version = "1.0"
description = "Machine Learning Library helpers"
requires-python = ">=3.12"
dependencies = [
    "dtreeviz>=2.2.2",
    "feature-engine>=1.9.3",
    "hyperopt>=0.2.7",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]
